<resources>
    <string name="app_name">WSN Monitor</string>
    <string name="action_settings">Settings</string>
    <string name="action_device">From Device</string>
    <string name="action_camera">From Camera</string>
    <string name="action_add">Add Picture</string>
    <string name="action_add_node">Add Node</string>
    <string name="action_add_sensor_node">Add Sensor Node</string>
    <string name="action_add_sensor">Add Sensor</string>
    <string name="select_sensor">Select Sensor</string>
    <string name="bluetooth_control">Bluetooth</string>
    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>
    <string name="title_activity_network_one">NetworkOne</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_sensor_node0">Sensor Node 0</string>
    <string name="title_activity_temperature">Temperature</string>
    <string name="title_activity_bluetooth">Bluetooth</string>
    <string name="title_activity_wsncontrol">WSNControl</string>
    <string name="title_activity_sensor_node0_internet">SensorNode0Internet</string>
    <string name="title_activity_temperature_internet">TemperatureInternet</string>
    <string name="title_activity_humidity_internet">HumidityInternet</string>
    <string name="title_activity_air_pressure_internet">AirPressureInternet</string>
    <string name="title_activity_light_intensity_internet">LightIntensityInternet</string>
    <string name="title_activity_vibration_internet">VibrationInternet</string>
    <string name="title_activity_acceleration_internet">AccelerationInternet</string>
</resources>
