<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.mike.wsnmonitor.SensorNode0">

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/add_sensor"
        android:icon="@drawable/ic_action_new_light"
        app:showAsAction="ifRoom"
        android:title="@string/action_add">
        <menu>
            <item
                android:id="@+id/action_add_sensor"
                android:icon="@drawable/ic_action_new_dark"
                app:showAsAction="never"
                android:title="@string/action_add_sensor"
                android:actionViewClass="android.widget.ImageButton"/>

        </menu>
    </item>

</menu>
